# tableextractor

./: pyproject.toml  requirements.txt
archive/: get_table.py  get_table1.py  get_title.py
src/tableextractor/: __init__.py  cli.py  main.py
tests/: test_main.py
